required input error

--- a/src/index.html
+++ b/src/index.html
@@ -17,17 +17,17 @@
       <!-- inputs -->
       <div class="inputs">
         <!-- Day  -->
-        <div class="input_container">
+        <div class="input_container day_input_container">
           <label for="day" class=" input_label day_label">DAY</label>
           <input type="number" class=" input day_input"id="day" placeholder="DD">
         </div>
         <!-- Month -->
-        <div class="input_container">
+        <div class="input_container Month_input_container">
           <label for="Month" class=" input_label Month_label">MONTH</label>
           <input type="number" class=" input Month_input"id="Month" placeholder="MM">
         </div>
         <!-- Year -->
-        <div class="input_container">
+        <div class="input_container Year_input_container">
           <label for="Year" class=" input_label Year_label">YEAR</label>
           <input type="number" class=" input Year_input"id="Year" placeholder="YYYY">
         </div>
@@ -43,9 +43,9 @@
 
       <!-- output -->
       <section class="output_container">
-        <p class="output Year_output"><span class="output_span Year_output">- -</span>Years</p>
-        <p class="output Month_output"><span class="output_span Month_output">- -</span>Months</p>
-        <p class="output day_output"><span class="output_span day_output">- -</span>Days</p>
+        <p class="output Year_output"><span class="output_span Year_output year_span">- -</span>Years</p>
+        <p class="output Month_output"><span class="output_span Month_output month_span">- -</span>Months</p>
+        <p class="output day_output"><span class="output_span day_output day_span">- -</span>Days</p>
       </section>
     </div>
   </section>
@@ -55,5 +55,6 @@
       Coded by <a href="https://github.com/DMK980">Derrick M</a>.
     </div>
   </footer>
+  <script src="app.js"></script>
 </body>
 </html>
