--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
+
+  <script defer src="app.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   
   <title>Age calculator app</title>
 
@@ -19,7 +22,7 @@
         <!-- Day  -->
         <div class="input_container day_input_container">
           <label for="day" class=" input_label day_label">DAY</label>
-          <input type="number" class=" input day_input"id="day" placeholder="DD">
+          <input type="number" class=" input day_input"id="day" placeholder="DD" >
         </div>
         <!-- Month -->
         <div class="input_container Month_input_container">
@@ -55,6 +58,5 @@
       Coded by <a href="https://github.com/DMK980">Derrick M</a>.
     </div>
   </footer>
-  <script src="app.js"></script>
 </body>
 </html>
