--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,7 @@
       </section>
     </div>
   </section>
+  <!-- credits -->
   <footer class="attribution">
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
